Avoid overlapping opacity multiple times on disabled elements of select and button.

--- a/js/src/components/disabled-div/index.scss
+++ b/js/src/components/disabled-div/index.scss
@@ -1,5 +1,13 @@
 .gla_disabled_div {
 	&.gla_disabled_div__disabled {
 		filter: opacity(0.5);
+
+		// Avoid overlapping opacity multiple times
+		select,
+		button {
+			&:disabled {
+				opacity: 1;
+			}
+		}
 	}
 }
